feed - user sees posts from who they follow, side nav selected bug, dark mode colors - kinda

--- a/src/components/post-feed/Posts.css
+++ b/src/components/post-feed/Posts.css
@@ -12,6 +12,7 @@
 	display: flex;
 	flex-direction: column;
 	row-gap: 1.5rem;
+	color: black !important;
 }
 
 .postHeader {
